Remove Win32 target, now x64 only

--- a/.github/workflows/github-build.yml
+++ b/.github/workflows/github-build.yml
@@ -16,7 +16,7 @@ jobs:
   build-win:
     strategy:
       matrix:
-        platform: [Win32, x64]
+        platform: [x64]
         configuration: [Debug, Release]
         toolset: [v143]
         image: [windows-2022]
